--- a/BoxViewClock/BoxViewClock.iOS/BoxViewClock.iOS.csproj
+++ b/BoxViewClock/BoxViewClock.iOS/BoxViewClock.iOS.csproj
@@ -114,6 +114,19 @@
     <BundleResource Include="Resources\Default-568h%402x.png" />
     <BundleResource Include="Resources\Default.png" />
     <BundleResource Include="Resources\Default%402x.png" />
+    <BundleResource Include="Resources\m01.jpg" />
+    <BundleResource Include="Resources\m02.jpg" />
+    <BundleResource Include="Resources\m03.jpg" />
+    <BundleResource Include="Resources\m04.jpg" />
+    <BundleResource Include="Resources\m05.jpg" />
+    <BundleResource Include="Resources\m06.jpg" />
+    <BundleResource Include="Resources\m07.jpg" />
+    <BundleResource Include="Resources\m08.jpg" />
+    <BundleResource Include="Resources\m09.jpg" />
+    <BundleResource Include="Resources\m10.jpg" />
+    <BundleResource Include="Resources\m11.jpg" />
+    <BundleResource Include="Resources\m12.jpg" />
+    <BundleResource Include="Resources\m13.jpg" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Icon.png" />
