--- a/BoxViewClock/BoxViewClock.Android/Properties/AndroidManifest.xml
+++ b/BoxViewClock/BoxViewClock.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="DecimalTime.DecimalTime" android:installLocation="auto" android:versionCode="1" android:versionName="1">
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="23" />
-	<application android:icon="@drawable/icon">
-	</application>
+	<application android:icon="@drawable/Icon" android:label="DecimalTime"></application>
 </manifest>
