--- a/BoxViewClock/BoxViewClock/BoxViewClock.csproj
+++ b/BoxViewClock/BoxViewClock/BoxViewClock.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="BoxViewClockPage.cs" />
+    <Compile Include="ClockView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepublicanDatetime.cs" />
   </ItemGroup>
