Allineati gli asset per iOS a quelli di Android.

--- a/BoxViewClock/BoxViewClock.iOS/BoxViewClock.iOS.csproj
+++ b/BoxViewClock/BoxViewClock.iOS/BoxViewClock.iOS.csproj
@@ -127,6 +127,7 @@
     <BundleResource Include="Resources\m11.jpg" />
     <BundleResource Include="Resources\m12.jpg" />
     <BundleResource Include="Resources\m13.jpg" />
+    <BundleResource Include="Resources\help.png" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Icon.png" />
